Revisats títols i breadcrumbs

--- a/layouts/partials/header_block.html
+++ b/layouts/partials/header_block.html
@@ -36,19 +36,19 @@
 										{{ partial "titles_subsection.html" . }}
 									{{ else }}
 
-										{{ if (eq $title "canigos") }}
+										{{ if (eq $title "canigo") }}
 											Framework Canigó
-										{{ else if (eq $title "sics") }}
+										{{ else if (eq $title "sic") }}
 											Servei d'Integració Contínua
-										{{ else if (eq $title "sgdes") }}
+										{{ else if (eq $title "sgde") }}
 											Servei de Gestió del Document Electrònic
 										{{ else if (eq $title "cs") }}
 											Centres de Suport
 									  {{ else if (eq $title "centre-de-suport") }}
 											Centre de Suport Canigó
-										{{ else if (eq $title "gicars") }}
+										{{ else if (eq $title "gicar") }}
 											GICAR
-										{{ else if (eq $title "clouds") }}
+										{{ else if (eq $title "cloud") }}
 											Container Cloud
 										{{ else }}
 											{{ partial "titles_subsection.html" . }}
