Correcció welcome pack SIC

--- a/layouts/partials/titles_subsection.html
+++ b/layouts/partials/titles_subsection.html
@@ -11,7 +11,7 @@
 	Versions anteriors
 {{ else if (eq $title "sic-serveis") }}
 	Serveis
-{{ else if (eq $title "sic-serveis") }}
+{{ else if (eq $title "sic-welcome-pack") }}
 	Welcome pack
 {{ else if (eq $title "sic-suport") }}
 	Suport
