--- a/layouts/partials/titles_subsection.html
+++ b/layouts/partials/titles_subsection.html
@@ -17,6 +17,8 @@
 	Suport
 {{ else if (eq $title "blog") }}
 	Blog d'Arquitectura
+{{ else if (eq $title "principis") }}
+	Principis d'Arquitectura
 {{ else }}
 	{{ .Title }}
 {{ end }}
