--- a/layouts/partials/header_block.html
+++ b/layouts/partials/header_block.html
@@ -48,6 +48,8 @@
 											Centre de Suport Canigó
 										{{ else if (eq $title "gicar") }}
 											GICAR
+										{{ else if (eq $title "principis") }}
+											Principis d'arquitectura
 										{{ else if (eq $title "cloud") }}
 											Container Cloud
 										{{ else }}
