--- a/layouts/partials/breadcrumbs.html
+++ b/layouts/partials/breadcrumbs.html
@@ -37,7 +37,7 @@
 	Container Cloud
 {{ end }}
 
-{{ if (eq $title "principis")  (eq $section "principis")}}
+{{ if (eq $section "principis")}}
 	Principis d'arquitectura
 {{ end }}
 
