--- a/layouts/partials/breadcrumbs.html
+++ b/layouts/partials/breadcrumbs.html
@@ -38,7 +38,7 @@
 {{ end }}
 
 {{ if (eq $section "principis")}}
-	Principis d'arquitectura
+	Arquitectura CTTI
 {{ end }}
 
 {{ if in .URL "blog_tags" }}
