--- a/layouts/partials/titles_subsection.html
+++ b/layouts/partials/titles_subsection.html
@@ -18,7 +18,7 @@
 {{ else if (eq $title "blog") }}
 	Blog d'Arquitectura
 {{ else if (eq $title "principis") }}
-	Principis d'Arquitectura
+	Arquitectura CTTI
 {{ else }}
 	{{ .Title }}
 {{ end }}
