--- a/layouts/partials/breadcrumbs.html
+++ b/layouts/partials/breadcrumbs.html
@@ -37,7 +37,7 @@
 	Container Cloud
 {{ end }}
 
-{{ if (eq $section "principis")}}
+{{ if (eq $section "arqctti")}}
 	Arquitectura CTTI
 {{ end }}
 
