--- a/layouts/partials/titles_subsection.html
+++ b/layouts/partials/titles_subsection.html
@@ -17,7 +17,7 @@
 	Suport
 {{ else if (eq $title "blog") }}
 	Blog d'Arquitectura
-{{ else if (eq $title "principis") }}
+{{ else if (eq $title "arqctti") }}
 	Arquitectura CTTI
 {{ else }}
 	{{ .Title }}
