--- a/layouts/partials/titles_subsection.html
+++ b/layouts/partials/titles_subsection.html
@@ -19,6 +19,8 @@
 	Blog d'Arquitectura
 {{ else if (eq $title "arqctti") }}
 	Arquitectura CTTI
+{{ else if (eq $title "dadesref") }}
+	Entitats de Referencia
 {{ else }}
 	{{ .Title }}
 {{ end }}
