--- a/layouts/partials/breadcrumbs.html
+++ b/layouts/partials/breadcrumbs.html
@@ -42,7 +42,7 @@
 {{ end }}
 
 {{ if (eq $section "dadesref")}}
-	Entitats Referencia
+	Entitats Referència
 {{ end }}
 
 {{ if in .URL "blog_tags" }}
