--- a/layouts/partials/titles_subsection.html
+++ b/layouts/partials/titles_subsection.html
@@ -20,7 +20,7 @@
 {{ else if (eq $title "arqctti") }}
 	Arquitectura CTTI
 {{ else if (eq $title "dadesref") }}
-	Entitats de Referència
+	Dades de Referència
 {{ else }}
 	{{ .Title }}
 {{ end }}
